--- a/tables2.html
+++ b/tables2.html
@@ -83,8 +83,8 @@
                 <div style="margin:7pt;">3</div>
             </div>
         <div class="flex-container">
-            <a href="tables2.html">
-                <img alt="layout" src="restaurant.png" height="500">
+            <a href="pastaria.html">
+                <img alt="layout" src="restaurant2.png" height="500">
              </a>
         </div>
         
