--- a/cart.html
+++ b/cart.html
@@ -84,9 +84,11 @@
     <button id="dark-mode" style="margin-left:10pt; background-color:white; border-radius:0%; border-width:1pt;" onclick="handelButton()">Dark Mode</button>
     <div class="box">
         <div class="flex-container">
-            <button class="back" style="float: left;">
-                <img class="arrow" src="arrow.png">
-            </button>
+            <a href="basket_1.html">
+                <button class="back" style="float: left;">
+                    <img class="arrow" src="arrow.png">
+                </button>
+            </a>
             <p style="margin-left: 10pt;">Warenkorb</p>
         </div>
 
@@ -101,6 +103,8 @@
                     <div>- gross</div>
                 </div>
             </div>
+            <div style="margin-left:50pt; margin-top:10pt;">1 Stück</div>
+            <div style="margin-left:50pt; margin-top:10pt;">7,99€</div>
         </div>
 
         <div class="flex-container">
@@ -113,6 +117,8 @@
                     <div>- doppelt Kaese</div>
                 </div>
             </div>
+            <div style="margin-left:50pt; margin-top:10pt;">1 Stück</div>
+            <div style="margin-left:50pt; margin-top:10pt;">12,00€</div>
         </div>
 
         <div class="flex-container">
@@ -125,6 +131,8 @@
                     <div>- mit Kohlensaeure</div>
                 </div>
             </div>
+            <div style="margin-left:20pt; margin-top:10pt;">1 Stück</div>
+            <div style="margin-left:50pt; margin-top:10pt;">15,00€</div>
         </div>
 
         <div class="flex-container">
@@ -138,6 +146,8 @@
                     <div>- mit Kaese</div>
                 </div>
             </div>
+            <div style="margin-left:50pt; margin-top:10pt;">1 Stück</div>
+            <div style="margin-left:50pt; margin-top:10pt;">3,00€</div>
         </div>
 
         <a href="userdata.html">
