--- a/cart.html
+++ b/cart.html
@@ -81,7 +81,9 @@
 </head>
 <link href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300" rel="stylesheet">
 <body class="body">
+    <!--Dark Mode Button-->
     <button id="dark-mode" style="margin-left:10pt; background-color:white; border-radius:0%; border-width:1pt;" onclick="handelButton()">Dark Mode</button>
+    <!--Back Button-->
     <div class="box">
         <div class="flex-container">
             <a href="basket_1.html">
@@ -91,7 +93,8 @@
             </a>
             <p style="margin-left: 10pt;">Warenkorb</p>
         </div>
-
+        
+        <!--Warenliste-->
         <div class="flex-container">
             <div class="item">
                 <img style="height: 100%; width: 100%;" src="pizza.png">
@@ -150,6 +153,7 @@
             <div style="margin-left:50pt; margin-top:10pt;">3,00€</div>
         </div>
 
+        <!--Weiter Button-->
         <a href="userdata.html">
             <button class="button">Weiter</button>
         </a>
