--- a/tables.html
+++ b/tables.html
@@ -9,8 +9,9 @@
 
 .body {
   padding: 25px;
-  background-color: white;
-  color: #00519e;
+  background-image: url("https://media.discordapp.net/attachments/914990860402327582/932750754559696996/bestbackground.png");
+  background-repeat: repeat;
+  background-attachment: fixed;
   font-size: 25px;
 }
 
@@ -20,7 +21,7 @@
 }
 
 .flex-container {
-    justify-content: center; 
+    justify-content: center;
     display: flex;
     margin: 5pt;
 }
@@ -29,7 +30,7 @@
     flex-direction: column;
     flex-wrap: wrap;
     display: flex;
-    
+    background-color: white;
 }
 
 .logo {
