--- a/cart.html
+++ b/cart.html
@@ -9,8 +9,9 @@
 
 .body {
   padding: 25px;
-  background-color: white;
-  color: #00519e;
+  background-image: url("https://media.discordapp.net/attachments/914990860402327582/932750754559696996/bestbackground.png");
+  background-repeat: repeat;
+  background-attachment: fixed;
   font-size: 25px;
 }
 
@@ -28,6 +29,7 @@
     flex-direction: column;
     flex-wrap: wrap;
     display: flex;
+    background-color: white;
 }
 
 .logo {
