redone the background

--- a/tables.html
+++ b/tables.html
@@ -17,7 +17,6 @@
 
 .dark-mode {
   background-color: #202225;
-  color: lightgray;
 }
 
 .flex-container {
@@ -30,7 +29,6 @@
     flex-direction: column;
     flex-wrap: wrap;
     display: flex;
-    background-color: white;
 }
 
 .logo {
@@ -39,7 +37,7 @@
 }
 
 .button {
-    background-color:white;
+    background-color:#ffffff;
     border-radius:0%;
     border-width:1pt;
     width: 50pt;
@@ -78,7 +76,7 @@
     <button id="dark-mode" style="margin-left:10pt; background-color:white; border-radius:0%; border-width:1pt;" onclick="handelButton()">Dark Mode</button>
     <div class="box">
         <div class="flex-container">
-            <div class="box">
+            <div class="box" id="box" style="background-color: white;">
                 <a href="pastaria.html">
                     <img alt="arrow_left" src="https://cdn.discordapp.com/attachments/922128716262428682/930209929606889562/unknown.png"
                     width="75" height="30">
