--- a/endscreen.html
+++ b/endscreen.html
@@ -9,14 +9,14 @@
 
 .body {
   padding: 25px;
-  background-color: white;
-  color: #00519e;
   font-size: 25px;
+  background-image: url("https://media.discordapp.net/attachments/914990860402327582/932750754559696996/bestbackground.png");
+  background-repeat: repeat;
+  background-attachment: fixed;
 }
 
 .dark-mode {
   background-color: #202225;
-  color: lightgray;
 }
 
 .flex-container {
@@ -28,14 +28,18 @@
 
 .endtext{
     margin-top: 150pt;
+    background-color: white;
 }
 
 
 </style>
 <script>
+
+    // Logik fuer dark mode
     function handelButton() {
         var element = document.body;
         element.classList.toggle("dark-mode");
+
     }
 </script>
 
@@ -43,9 +47,12 @@
 
 <link href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300" rel="stylesheet">
 <body class="body">
+
+    <!-- Button fuer dark mode -->
     <button id="dark-mode" style="margin-left:10pt; background-color:white; border-radius:0%; border-width:1pt;" onclick="handelButton()">Dark Mode</button>
     <div class="box">
-        
+
+            <!-- Abschiedstext" -->
             <div class="flex-container">
                 <b class="endtext">Vielen Dank!</b>
             </div>
