--- a/cart.html
+++ b/cart.html
@@ -89,7 +89,7 @@
         <div class="flex-container">
             <a href="basket_1.html">
                 <button class="back" style="float: left;">
-                    <img class="arrow" src="arrow.png">
+                    <img class="arrow" src="https://cdn.discordapp.com/attachments/922128716262428682/930209929606889562/unknown.png">
                 </button>
             </a>
             <p style="margin-left: 10pt;">Warenkorb</p>
