--- a/cart.html
+++ b/cart.html
@@ -9,7 +9,7 @@
 
 .body {
   padding: 25px;
-  background-image: url("https://media.discordapp.net/attachments/914990860402327582/932750754559696996/bestbackground.png");
+  background-image: url("https://cdn.discordapp.com/attachments/914990860402327582/932767212429791252/betterbestbackground.png");
   background-repeat: repeat;
   background-attachment: fixed;
   font-size: 25px;
