--- a/endscreen.html
+++ b/endscreen.html
@@ -26,9 +26,15 @@
     margin: 5pt;
 }
 
-.endtext{
+.endtext {
+    font-size: 32pt;
     margin-top: 150pt;
     background-color: white;
+}
+
+.box {
+    background-color: white;
+    text-align: center;
 }
 
 
@@ -54,9 +60,15 @@
 
             <!-- Abschiedstext" -->
             <div class="flex-container">
-                <b class="endtext">Vielen Dank!</b>
+                <div class="endtext">Eine Bestellübersicht wurde an die von Ihnen angegebene E-Mail versandt.</div>
             </div>
-
+            <div class="endtext">Vielen Dank!</div>
+            <div><br></div>
+            <div><br></div>
+            <div><br></div>
+            <div><br></div>
+            <div><br></div>
+            <div><br></div>
 
     </div>
 
