dark mode entfernt

--- a/tables.html
+++ b/tables.html
@@ -17,9 +17,6 @@
   background-size: 100% 100%;
 }
 
-.dark-mode {
-  background-color: #202225;
-}
 
 .flex-container {
     justify-content: center;
@@ -58,8 +55,6 @@
 </head>
 <link href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300" rel="stylesheet">
 <body class="body">
-    <!--this is the button for changing the style to darkmode-->
-    <button id="dark-mode" style="margin-left:10pt; background-color:white; border-radius:0%; border-width:1pt;" onclick="handelButton()">Dark Mode</button>
     <div class="box">
         <div class="flex-container">
             <div class="box" id="box" style="background-color: white;">
@@ -97,7 +92,7 @@
     }
     
     let v = "Hallooo!"
-    alert(v):
+    alert(v)
     
 </script>
 </body>
