--- a/basket_1.html
+++ b/basket_1.html
@@ -11,10 +11,11 @@
     
 .body {
   padding: 25px;
-  background-image: url("https://media.discordapp.net/attachments/914990860402327582/932750754559696996/bestbackground.png");
+  background-image: url("https://cdn.discordapp.com/attachments/914990860402327582/935257095287242893/best_background_2.jpg");
   background-repeat: repeat;
   background-attachment: fixed;
   font-size: 25px;
+  background-size: 100% 100%;
 }
 
 .dark-mode {
