--- a/cart.html
+++ b/cart.html
@@ -9,10 +9,11 @@
 
 .body {
   padding: 25px;
-  background-image: url("https://cdn.discordapp.com/attachments/914990860402327582/932767212429791252/betterbestbackground.png");
+  background-image: url("https://cdn.discordapp.com/attachments/914990860402327582/935257095287242893/best_background_2.jpg");
   background-repeat: repeat;
   background-attachment: fixed;
   font-size: 25px;
+  background-size: 100% 100%;
 }
 
 .dark-mode {
