Removed dark mode button first page

--- a/pastaria.html
+++ b/pastaria.html
@@ -15,6 +15,7 @@
   background-image: url("https://get.wallhere.com/photo/bar-restaurant-interior-design-tables-chairs-design-style-meal-reception-Interiors-function-hall-694056.jpg");
   background-repeat: no-repeat;
   background-attachment: fixed;
+  background-size: cover;
 }
 
 
