--- a/cart.html
+++ b/cart.html
@@ -73,6 +73,21 @@
 
 
 </style>
+
+<script>
+
+    function stueckanzahl(){
+        document.getElementById("amountburger").innerHTML = localStorage["burgercount"] + " Stück"
+        document.getElementById("amountpizza").innerHTML = localStorage["pizzacount"] + " Stück";
+        document.getElementById("amountwater").innerHTML = localStorage["wassercount"] + " Stück";
+        document.getElementById("amountpasta").innerHTML = localStorage["pastacount"] + " Stück";
+    }
+
+
+    window.onload = stueckanzahl;
+
+</script>
+
 </head>
 <link href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300" rel="stylesheet">
 <body class="body">
@@ -100,7 +115,7 @@
                     <div>- gross</div>
                 </div>
             </div>
-            <div style="margin-left:50pt; margin-top:10pt;">1 Stück</div>
+            <div id="amountpizza" style="margin-left:50pt; margin-top:10pt;">1 Stück</div>
             <div style="margin-left:50pt; margin-top:10pt;">7,99€</div>
         </div>
 
@@ -114,7 +129,7 @@
                     <div>- doppelt Kaese</div>
                 </div>
             </div>
-            <div style="margin-left:50pt; margin-top:10pt;">1 Stück</div>
+            <div id="amountburger" style="margin-left:50pt; margin-top:10pt;">1 Stück</div>
             <div style="margin-left:50pt; margin-top:10pt;">12,00€</div>
         </div>
 
@@ -128,7 +143,7 @@
                     <div>- mit Kohlensaeure</div>
                 </div>
             </div>
-            <div style="margin-left:20pt; margin-top:10pt;">1 Stück</div>
+            <div id="amountwater" style="margin-left:20pt; margin-top:10pt;">1 Stück</div>
             <div style="margin-left:50pt; margin-top:10pt;">15,00€</div>
         </div>
 
@@ -143,7 +158,7 @@
                     <div>- mit Kaese</div>
                 </div>
             </div>
-            <div style="margin-left:50pt; margin-top:10pt;">1 Stück</div>
+            <div id="amountpasta" style="margin-left:50pt; margin-top:10pt;">1 Stück</div>
             <div style="margin-left:50pt; margin-top:10pt;">3,00€</div>
         </div>
 
