every bak button has a destination now
added back button to userdata
gave every back button the right destination

--- a/basket_1.html
+++ b/basket_1.html
@@ -149,8 +149,8 @@
     }
 
     function setPrev(){
-        if(localStorage["reserved"] == 1){
-            document.getElementById("next").href = "tables.html";
+        if(localStorage["r"] == 1 || localStorage["onr"] == 1){
+            document.getElementById("prev").href = "tables.html";
         }
     }
      
